# timo

./: .gitignore  CLAUDE.md  LICENSE  README.md  next.config.mjs  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  robots.txt  sitemap.xml
public/: offline.html  sw.js
scripts/: migrate-from-im.sql  post-build.js  run-tauri.js  tauri-build.sh  tauri-prepare.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/launcher/: Info.plist  launcher.c
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/api/preferences/: route.ts
src/app/settings/: page.tsx
src/app/skills/: page.tsx
src/components/: AppSidebar.tsx  ChatMessage.tsx  ClaudeLimitsBar.tsx  Composer.tsx  DirectoryPicker.tsx  ExecutionPanel.tsx  GlobalTodosOverlay.tsx  NewProjectModal.tsx  NotificationsClient.tsx  SwRegister.tsx  TabsBar.tsx  TaskSidebar.tsx  ThemePicker.tsx  UpdaterClient.tsx
src/components/ui/: InlineRename.tsx  dialogs.tsx
src/lib/: chat-engine.ts  chat-state.ts  claude-limits.ts  executor.ts  loop-runner.ts  preferences.ts  skills-seed.ts  skills.ts  sse.ts  suggest-engine.ts  tauri-updater.ts  tidy-engine.ts  todo-sync.ts  use-sse-stream.ts
src/lib/ai/: agents.ts  client.ts  path-resolver.ts
src/lib/db/: index.ts  schema.ts
src/lib/tabs/: TabsContext.tsx
src/lib/theme/: ThemeProvider.tsx  themes.ts
src/lib/utils/: id.ts  paths.ts
src/types/: index.ts
(+38 files in other folders)
