[package]
name = "timo"
version = "0.3.0"
description = "TIMO — Think · Idea-Manager · Operation. Local-first AI executor desktop app."
authors = ["navskh"]
license = "MIT"
repository = "https://github.com/navskh/timo"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "timo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
